--- a/dataPreprocess/data_augmentation.ipynb
+++ b/dataPreprocess/data_augmentation.ipynb
@@ -48,8 +48,8 @@
    "source": [
     "def paraphrase_aug(data, num):\n",
     "    aug_text = {'text': []}\n",
-    "    for text in data:\n",
-    "        paraphrases = parrot.augment(text,  max_length = 250, max_return_phrases = 5, do_diverse=False)\n",
+    "    for text in tqdm(data):\n",
+    "        paraphrases = parrot.augment(text,  max_length = 250, max_return_phrases = 5, do_diverse=False, use_gpu=True)\n",
     "        if paraphrases:\n",
     "            for para in paraphrases:\n",
     "                if para[1] != 0:\n",
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin_data = pd.read_csv(\"mbti_train.csv\")"
+    "origin_data = pd.read_csv(\"/workspaces/MBTI-Personality-Test/Data/mbti_train.csv\")"
    ]
   },
   {
