--- a/dataPreprocess/to_dataset.ipynb
+++ b/dataPreprocess/to_dataset.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.venv/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import datasets\n",
     "from datasets import load_dataset"
@@ -12,30 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using custom data configuration default-74539e7a26ff892b\n"
+      "Using custom data configuration default-3a88794fd5e058a8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset csv/default to /home/vscode/.cache/huggingface/datasets/csv/default-74539e7a26ff892b/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
+      "Downloading and preparing dataset csv/default to /home/vscode/.cache/huggingface/datasets/csv/default-3a88794fd5e058a8/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data files: 100%|██████████| 2/2 [00:00<00:00, 3109.19it/s]\n",
-      "Extracting data files #0: 100%|██████████| 1/1 [00:00<00:00, 121.28obj/s]\n",
-      "Extracting data files #1: 100%|██████████| 1/1 [00:00<00:00, 206.81obj/s]\n",
+      "Downloading data files: 100%|██████████| 2/2 [00:00<00:00, 6462.72it/s]\n",
+      "Extracting data files #0: 100%|██████████| 1/1 [00:00<00:00, 155.78obj/s]\n",
+      "Extracting data files #1: 100%|██████████| 1/1 [00:00<00:00, 253.80obj/s]\n",
       "Generating train split: 0 examples [00:00, ? examples/s]/home/vscode/.venv/lib/python3.10/site-packages/datasets/download/streaming_download_manager.py:714: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
       "  return pd.read_csv(xopen(filepath_or_buffer, \"rb\", use_auth_token=use_auth_token), **kwargs)\n",
       "Generating test split: 0 examples [00:00, ? examples/s]              /home/vscode/.venv/lib/python3.10/site-packages/datasets/download/streaming_download_manager.py:714: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
@@ -47,24 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset csv downloaded and prepared to /home/vscode/.cache/huggingface/datasets/csv/default-74539e7a26ff892b/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
+      "Dataset csv downloaded and prepared to /home/vscode/.cache/huggingface/datasets/csv/default-3a88794fd5e058a8/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 290.70it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 239.81it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataset = load_dataset('csv', data_files={'train': '/workspaces/MBTI-Personality-Test/Data/mbti_train.csv', 'test': '/workspaces/MBTI-Personality-Test/Data/mbti_test.csv'})"
+    "dataset = load_dataset('csv', data_files={'train': '/workspaces/MBTI-Personality-Test/Data/mbti_train_augmented.csv', 'test': '/workspaces/MBTI-Personality-Test/Data/mbti_test.csv'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +82,7 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['label', 'text'],\n",
-       "        num_rows: 327828\n",
+       "        num_rows: 478389\n",
        "    })\n",
        "    test: Dataset({\n",
        "        features: ['label', 'text'],\n",
@@ -82,7 +91,7 @@
        "})"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +119,7 @@
     }
    ],
    "source": [
-    "dataset.push_to_hub(\"Shunian/kaggle-mbti-cleaned\")"
+    "dataset.push_to_hub(\"Shunian/kaggle-mbti-cleaned-augemented\")"
    ]
   },
   {
@@ -137,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 15 2022, 20:55:06) [GCC 10.2.1 20210110]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
