--- a/dataPreprocess/data_augmentation.ipynb
+++ b/dataPreprocess/data_augmentation.ipynb
@@ -424,7 +424,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 78%|███████▊  | 1272/1631 [19:46<05:48,  1.03it/s]"
+      "100%|██████████| 1631/1631 [25:18<00:00,  1.07it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num after paraphrase:  18167\n",
+      "augmented_data:  (691, 1)\n",
+      "new_data:  (2322, 1)\n",
+      "num after synonym:  15845\n",
+      "augmented_data:  (2322, 1)\n",
+      "num after contextual:  11201\n",
+      "augmented_data:  (4644, 1)\n",
+      "new_data:  (9288, 1)\n",
+      "Augmenting label: 14, num to aug: 13178\n",
+      "data:  (7311,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7311/7311 [1:51:05<00:00,  1.10it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num after paraphrase:  9695\n",
+      "augmented_data:  (3483, 1)\n",
+      "new_data:  (10794, 1)\n",
+      "num after synonym:  0\n",
+      "augmented_data:  (9695, 1)\n",
+      "new_data:  (20489, 1)\n",
+      "Augmenting label: 15, num to aug: 11737\n",
+      "data:  (8752,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8752/8752 [2:08:47<00:00,  1.13it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num after paraphrase:  7222\n",
+      "augmented_data:  (4515, 1)\n",
+      "new_data:  (13267, 1)\n",
+      "num after synonym:  0\n",
+      "augmented_data:  (7222, 1)\n",
+      "new_data:  (20489, 1)\n"
      ]
     }
    ],
@@ -579,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 15 2022, 20:55:06) [GCC 10.2.1 20210110]"
   },
   "orig_nbformat": 4,
   "vscode": {
